--- a/PhotoFolio/contact.html
+++ b/PhotoFolio/contact.html
@@ -55,9 +55,9 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
+              <li><a href="gallery-single-company.html">Company Website</a></li>
+              <li><a href="gallery-single-blog.html">Blog Website</a></li>
+              <!--<li><a href="gallery.html">Architecture</a></li>
               <li><a href="gallery.html">Animals</a></li>
               <li><a href="gallery.html">Sports</a></li>
               <li><a href="gallery.html">Travel</a></li>
@@ -67,7 +67,7 @@
                   <li><a href="#">Sub Menu 2</a></li>
                   <li><a href="#">Sub Menu 3</a></li>
                 </ul>
-              </li>
+              </li>-->
             </ul>
           </li>
           <li><a href="services.html">Experience</a></li>
