--- a/gallery-single-blog.html
+++ b/gallery-single-blog.html
@@ -55,8 +55,8 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery-single-company.html" class="active">Company Website</a></li>
-              <li><a href="gallery-single-blog.html">Blog website</a></li>
+              <li><a href="gallery-single-company.html">Company Website</a></li>
+              <li><a href="gallery-single-blog.html"class="active">Blog Website</a></li>
               <!--<li><a href="gallery.html">People</a></li>
               <li><a href="gallery.html">Architecture</a></li>
               <li><a href="gallery.html">Animals</a></li>
@@ -95,8 +95,8 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Company website</h2>
-            <p>This is a fake company website I made</p>
+            <h2>Blog Website</h2>
+            <p>This is a fake blog website I made</p>
             <a class="cta-btn" href="contact.html">Available for hire</a>
 
           </div>
@@ -113,17 +113,9 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/gallery/company_about.png" alt="">
+                <img src="assets/img/gallery/django_blog.png" alt="">
               </div>
-              <div class="swiper-slide">
-                <img src="assets/img/gallery/company_home.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="assets/img/gallery/company_products.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img src="assets/img/gallery/company_tests.png" alt="">
-              </div>
+              
               
 
             </div>
@@ -138,12 +130,12 @@
 
           <div class="col-lg-8">
             <div class="portfolio-description">
-              <h2>Company Website Project</h2>
+              <h2>Blog Website Project</h2>
               <p>
-                This was the first project I made in my web app development class that required us to use the django framework templates for each of the pages.
+                This was a project I made in my web app development class that required us to use the django framework templates for each of the pages.
                 </p>
               <p>
-                This was an enjoyable project and helped to give me experience using django in a somewhat realistic fasion. I learned how to make my own pages and how to get data to populate them.
+                This was an enjoyable project and helped to give me experience using django in a somewhat realistic fasion. I learned how to make my own pages and how to get data to populate them. This blog project allows users to create and view posts.
                  </p>
 
              <!-- <div class="testimonial-item">
@@ -173,11 +165,11 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong> <span>Web application development</span></li>
+                <li><strong>Category</strong> <span>Web Application Development</span></li>
                 <li><strong>Client</strong> <span>Trish Duce</span></li>
-                <li><strong>Project date</strong> <span>25 September, 2024</span></li>
-                <li><strong>Project URL</strong> <a href="https://github.com/karpineczla/company-website">https://github.com/karpineczla/company-website</a></li>
-                <li><a href="https://github.com/karpineczla/company-website" class="btn-visit align-self-start">Visit Website</a></li>
+                <li><strong>Project date</strong> <span>8 October, 2024</span></li>
+                <li><strong>Project URL</strong> <a href="https://github.com/karpineczla/blog">https://github.com/karpineczla/company-website</a></li>
+                <li><a href="https://github.com/karpineczla/blog" class="btn-visit align-self-start">Visit Website</a></li>
               </ul>
             </div>
           </div>
