--- a/services.html
+++ b/services.html
@@ -56,6 +56,7 @@
           <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="gallery-single-company.html">Company Website</a></li>
+              <li><a href="gallery-single-blog.html">Blog Website</a></li>
               <!--<li><a href="gallery.html">People</a></li>
               <li><a href="gallery.html">Architecture</a></li>
               <li><a href="gallery.html">Animals</a></li>
