--- a/gallery-single-blog.html
+++ b/gallery-single-blog.html
@@ -113,7 +113,13 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/gallery/django_blog.png" alt="">
+                <img src="assets/img/gallery/django_blog2.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/gallery/django_blog_login.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img src="assets/img/gallery/django_blog_signup.png" alt="">
               </div>
               
               
@@ -135,7 +141,7 @@
                 This was a project I made in my web app development class that required us to use the django framework templates for each of the pages.
                 </p>
               <p>
-                This was an enjoyable project and helped to give me experience using django in a somewhat realistic fasion. I learned how to make my own pages and how to get data to populate them. This blog project allows users to create and view posts.
+                This was an enjoyable project and helped to give me experience using django in a somewhat realistic fasion. I learned how to make my own pages and how to get data to populate them. This blog project allows users to create and view posts. I also implemented a sign up, log in, and log out funcitons on my site.
                  </p>
 
              <!-- <div class="testimonial-item">
