--- a/gallery-single-final.html
+++ b/gallery-single-final.html
@@ -55,7 +55,7 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery.html" class="active">Company Website</a></li>
+              <li><a href="gallery.html" class="active">Final group project</a></li>
               <!--<li><a href="gallery.html">People</a></li>
               <li><a href="gallery.html">Architecture</a></li>
               <li><a href="gallery.html">Animals</a></li>
@@ -94,8 +94,8 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Company website</h2>
-            <p>This is a fake company website I made</p>
+            <h2>Final group Project</h2>
+            <p>This is group project I worked on in Web app development. Its made with django</p>
             <a class="cta-btn" href="contact.html">Available for hire</a>
 
           </div>
@@ -112,7 +112,7 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/gallery/home.png" alt="">
+                <img src="assets/img/gallery/Home.png" alt="">
               </div>
               <div class="swiper-slide">
                 <img src="assets/img/gallery/Latest.png" alt="">
